validations+json_format

--- a/style.css
+++ b/style.css
@@ -499,6 +499,10 @@ body {
   font-weight: 400;
 }
 
+/* Error Class */
+.error{
+  color: red;
+}
 /*****************************************************
                     Media Queries
 ******************************************************/
